--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div id="activeUsersSection">
       <h4>Active Users: <span id="activeUserCount">0</span></h4>
       </br>
-      <em> DS(Admin): refresh page after selecting Profile pic to comit changes. select file and click send; file maynot display after selecting unless you click send
+      <em> DS(Admin): when selecting file, input a one word  or more on file description or random text based on file before sending. and click send; file maynot display after selecting unless you follow rules & click send
     </div>
     <div class="messages" id="messages"></div>
     <form id="chatForm">
